--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,21 +1,30 @@
 name: Run Python Script
 
+# Triggers: scheduled + manual
 on:
   schedule:
-    - cron: "0 8 * * *"  # runs every day at 08:00 UTC
+    - cron: "0 8 * * *"  # every day at 08:00 UTC
   workflow_dispatch:      # allows manual run
 
 jobs:
   run:
     runs-on: ubuntu-latest
+
     steps:
+      # Step 1: Get repo code
       - uses: actions/checkout@v4
+
+      # Step 2: Set up Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.x"
+
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt || true
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; else pip install beautifulsoup4 requests; fi
+
+      # Step 4: Run the script
       - name: Run script
         run: python scra.py
