--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,33 +1,47 @@
-name: Run Python Script
+name: Run Python Script and Update Gist
 
-# Triggers: scheduled + manual
 on:
-  schedule:
-    - cron: "0 8 * * *"  # every day at 08:00 UTC
-  workflow_dispatch:      # allows manual run
+
+Triggers: scheduled + manual
+
+schedule:
+# Runs every day at 08:00 UTC
+- cron: "0 8 * * *"
+workflow_dispatch:      # Allows manual run
 
 jobs:
-  run:
-    runs-on: ubuntu-latest
+run:
+runs-on: ubuntu-latest
 
-    steps:
-      # Step 1: Checkout repository
-      - uses: actions/checkout@v4
+# Set the GITHUB_TOKEN environment variable from the repository secret.
+# This is required for the 'gist_scraper.py' script to authenticate with GitHub's Gist API.
+env:
+  GITHUB_TOKEN: ${{ secrets.SKY_GIST_SEC }}
 
-      # Step 2: Set up Python
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.x"
+steps:
+  # Step 1: Checkout repository
+  - name: Checkout Repository
+    uses: actions/checkout@v4
 
-      # Step 3: Install Python dependencies
-      - name: Install dependencies
-        run: pip install -r requirements.txt
+  # Step 2: Set up Python
+  - name: Set up Python
+    uses: actions/setup-python@v5
+    with:
+      python-version: "3.11" # Using a specific, recent version
+      
+  # Step 3: Install Python dependencies
+  - name: Install Dependencies
+    run: |
+      python -m pip install --upgrade pip
+      # Installing required libraries: requests, beautifulsoup4, and playwright
+      pip install requests beautifulsoup4 playwright
 
-      # Step 4: Install Playwright browsers
-      - name: Install Playwright browsers
-        run: playwright install
+  # Step 4: Install Playwright browsers
+  - name: Install Playwright browsers
+    # Install the Chromium browser binary required by the script
+    run: playwright install chromium
 
-      # Step 5: Run the script
-      - name: Run script
-        run: python skyscra.py
+  # Step 5: Run the script
+  - name: Run Gist Scraper Script
+    # CRITICAL: Using the correct script name (gist_scraper.py)
+    run: python skyscra.py
