--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -14,7 +14,7 @@ jobs:
 
     # Inject the GIST token from the repository secrets into the environment
     env:
-      GITHUB_TOKEN: ${{ secrets.GH_PAT_GIST }}
+      GITHUB_TOKEN: ${{ secrets.SKY_GIST_SEC }}
 
     steps:
       # Step 1: Checkout repository files
