--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -3,10 +3,10 @@ name: Run SkyScrap
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 10 * * *"  # runs every day at 6 AM UTC
+    - cron: "0 7 * * *"  # runs daily at 07:00 UTC
 
 jobs:
-  scrape:
+  run-scraper:
     runs-on: ubuntu-latest
 
     steps:
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
@@ -25,6 +25,4 @@ jobs:
           playwright install chromium
 
       - name: Run scraper
-        env:
-          JSONHOST_EDIT_KEY: ${{ secrets.JSONHOST_EDIT_KEY }}
-        run: python skyscrap.py
+        run: python ./skyscrap.py
