--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,12 +1,13 @@
-name: Run SkyScrap
+name: Run Skyscraper
 
 on:
+  push:
+    branches:
+      - main
   workflow_dispatch:
-  schedule:
-    - cron: "0 7 * * *"  # runs daily at 07:00 UTC
 
 jobs:
-  run-scraper:
+  run-script:
     runs-on: ubuntu-latest
 
     steps:
@@ -16,13 +17,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.10"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install playwright beautifulsoup4 requests
-          playwright install chromium
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Run scraper
-        run: python ./skyscrap.py
+      - name: Run skyscrap.py
+        working-directory: ./vg
+        run: python skyscrap.py
