--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,4 +1,4 @@
-name: Run SkyScrap
+name: Run Skyscraper 2
 
 on:
   push:
@@ -23,6 +23,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+      - name: Debug workspace
+        run: |
+          echo "Current directory:"
+          pwd
+          echo "Files here:"
+          ls -R
 
       - name: Run skyscrap.py
         run: python skyscrap.py
