--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -24,12 +24,6 @@ jobs:
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Debug workspace
-        run: |
-          echo "Current directory:"
-          pwd
-          echo "Files here:"
-          ls -R
 
-      - name: Run skyscrap.py
-        run: python skyscrap.py
+      - name: Run skyscra.py
+        run: python skyscra.py
