--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,4 +1,4 @@
-name: Run Skyscraper 2
+name: Run Skyscraper Script
 
 on:
   push:
@@ -23,7 +23,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
+          # Install browsers for Playwright
+          python -m playwright install --with-deps
 
       - name: Run skyscra.py
         run: python skyscra.py
