--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,4 +1,4 @@
-name: Run Skyscraper Script
+name: Run SkyScrap v1.2
 
 on:
   push:
@@ -23,8 +23,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          # Install browsers for Playwright
           python -m playwright install --with-deps
 
       - name: Run skyscra.py
+        env:
+          EDIT_KEY: ${{ secrets.JSONHOST_EDIT_KEY }}
         run: python skyscra.py
