--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,4 +1,4 @@
-name: Run Skyscraper Script
+name: Run SkyScraper v1.4
 
 on:
   push:
@@ -21,14 +21,23 @@ jobs:
         with:
           python-version: '3.10'
 
-      # Step 3: Install dependencies
+      # Step 3: Cache Python dependencies
+      - name: Cache pip
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      # Step 4: Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           python -m playwright install --with-deps
 
-      # Step 4: Confirm files
+      # Step 5: Confirm files
       - name: List repository files
         run: |
           echo "Current directory:"
@@ -36,7 +45,7 @@ jobs:
           echo "Files here:"
           ls -R
 
-      # Step 5: Debug EDIT_KEY presence
+      # Step 6: Debug EDIT_KEY presence
       - name: Check EDIT_KEY
         env:
           EDIT_KEY: ${{ secrets.JSONHOST_EDIT_KEY }}
@@ -49,7 +58,7 @@ jobs:
             echo "✅ EDIT_KEY is present"
           fi
 
-      # Step 6: Run scraper
+      # Step 7: Run scraper
       - name: Run skyscra.py
         env:
           EDIT_KEY: ${{ secrets.JSONHOST_EDIT_KEY }}
