--- a/.github/workflows/skybroc_run.yml
+++ b/.github/workflows/skybroc_run.yml
@@ -1,9 +1,10 @@
-name: Skybroc v0.11
+name: Skybroc v0.12
 
-on:
-  # Runs once a day at 9:30 PM Paris time (20:30 UTC)
+on: 
   schedule:
-    - cron: '30 20 * * *'
+    - cron: '0 3 * * 1'    # Every Monday at 03:00
+    - cron: '30 4 * * *'   # Every Wednesday at 04:30
+    - cron: '0 9 * * 5'    # Every Friday at 09:00
   # Allows manual run from the Actions tab
   workflow_dispatch:
 
@@ -12,16 +13,16 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: 🔄 Checkout code
+      - name: 1.Checkout code
         uses: actions/checkout@v4
 
-      - name: 🐍 Set up Python
+      - name: 2.Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.x' 
 
       # --- 1. Cache dependencies ---
-      - name: 💾 Cache pip dependencies
+      - name: 3.Cache pip dependencies
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
@@ -29,12 +30,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
-      - name: 📦 Install dependencies
+      - name: 4.Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install requests beautifulsoup4
 
-      - name: ⚙️ Run Scraper and Update JSONHosting
+      - name: 5.Run SkyBroc
         run: python tools/skybroc.py
         env:
           # Securely pass the edit key from GitHub Secrets to the Python script
