--- a/.github/workflows/skyscrap_run.yml
+++ b/.github/workflows/skyscrap_run.yml
@@ -1,6 +1,10 @@
-name: SkyScraper v2025.11.13.2
+name: SkyScraper v2025.11.14.1
 
 on:
+  schedule:
+    - cron: '0 3 * * 1'    # Every Monday at 03:00
+    - cron: '30 4 * * *'   # Every Wednesday at 04:30
+    - cron: '0 9 * * 5'    # Every Friday at 09:00
   push:
     branches:
       - main
@@ -12,17 +16,17 @@ jobs:
 
     steps:
       # Step 1: Checkout repository
-      - name: Checkout repository
+      - name: 1.Checkout repository
         uses: actions/checkout@v4
 
       # Step 2: Set up Python
-      - name: Set up Python
+      - name: 2.Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
       # Step 3: Cache Python dependencies
-      - name: Cache pip
+      - name: 3.Cache pip
         uses: actions/cache@v3
         with:
           path: ~/.cache/pip
@@ -31,14 +35,14 @@ jobs:
             ${{ runner.os }}-pip-
 
       # Step 4: Install dependencies
-      - name: Install dependencies
+      - name: 4.Install dependencies
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           python -m playwright install --with-deps
 
       # Step 5: Confirm files
-      - name: List repository files
+      - name: 5.List repository files
         run: |
           echo "Current directory:"
           pwd
@@ -46,7 +50,7 @@ jobs:
           ls -R
 
       # Step 6: Debug EDIT_KEY presence
-      - name: Check EDIT_KEY
+      - name: 6.Check EDIT_KEY
         env:
           EDIT_KEY: ${{ secrets.JSONHOST_EDIT_KEY }}
         run: |
@@ -59,7 +63,7 @@ jobs:
           fi
 
       # Step 7: Run scraper
-      - name: Run skyscra.py
+      - name: 7.Run SkyScra
         env:
           EDIT_KEY: ${{ secrets.JSONHOST_EDIT_KEY }}
         run: python skyscra.py
